fix checkbox tik not visible issue

--- a/scholarx/archive/styles.css
+++ b/scholarx/archive/styles.css
@@ -89,7 +89,3 @@ hr {
   word-wrap: break-word;
   white-space: pre-line;
 }
-
-.university-checkbox {
-  text-transform: capitalize;
-}
